# dlo-stack

./: .gitignore  README.md  bad.list
C++_Repository/: demo.cpp  gripper_control.cpp  kuka_moveit.cpp  kuka_moveit.h
darknet_ros/darknet/: Makefile  bad.list
darknet_ros/darknet_ros/: CMakeLists.txt
dlo/: CMakeLists.txt  package.xml
dlo/include/: dlo.h  dlo_global.h  gripper_control.h  img_processing.h  kuka_moveit.h  manipulation.h  move_kuka.h  ros_image_converter.h  strategy.h  traversal.h
dlo/launch/: dlo_networks.launch
dlo/python/: L_Robotiq2FGripperRtuNode.py  Test.py  camera.py  listener.py  tempCodeRunnerFile.py
dlo/src/: Crop.cpp  Main.cpp  Skeleton.cpp  Test.cpp  Traversal.cpp  crop.cpp  dlo_recognize_and_untie.cpp  gripper_control.cpp  img_processing.cpp  manipulation.cpp  move_kuka.cpp  remove_background.cpp  ros_image_converter.cpp  skeleton.cpp  (+4 more)
ethercat_kuka/: CMakeLists.txt  README.md  package.xml
kukafri_hw/: CMakeLists.txt  README.md  日志.pptx
servo/: CMakeLists.txt  package.xml
src/iiwa_stack/iiwa_description/: package.xml
src/iiwa_stack/iiwa_description/launch/: gazebo.display.launch
src/iiwa_stack/iiwa_description/meshes/: base_part0_table.stl  base_part0_table_c.stl  base_part2_neck.stl  base_part3_camera_holder.stl
src/iiwa_stack/iiwa_description/meshes/iiwa7/body/: body+150.stl  body+200.stl  body+250.stl  body+350.stl  body_col.stl
src/iiwa_stack/iiwa_description/meshes/iiwa7/collision/: body.stl
src/iiwa_stack/iiwa_description/urdf/: iiwa.gazebo.xacro  iiwa.urdf  iiwa.urdf.xacro  iiwa.xacro  platform.xacro
(+238 files in other folders)
