<?xml version="1.0"?>
<package>
  <name>iiwa_description</name>
  <version>1.4.0</version>
  <description>This package contains the URDF of the KUKA LBR IIWA robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>fake_localization</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
